Fix: main container overflows the page
Delete the second row of main

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body{
     min-height: 100%;
     display: grid;
-    grid-template-columns: 1.1fr 4fr;
+    grid-template-columns: 1.2fr 5fr;
     grid-template-rows: 1.5fr 4fr 4fr;
     grid-template-areas: 
     "sidebar header"
@@ -45,6 +45,7 @@ svg{
     grid-template-columns: 0.35fr 1fr;
     align-items: center;
     gap: 10px;
+    font-size: 16px;
 }
 .dashboard-logo .logo svg{
     height: 3rem;
@@ -154,7 +155,6 @@ svg{
 .main{
     display: grid;
     grid-template-columns: 3fr 1.5fr;
-    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
     "projects announcement"
     "projects trending";
@@ -173,13 +173,15 @@ svg{
 .projects{
     grid-area: projects;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.1fr 3fr 3fr 3fr;
+    grid-template-columns: 4fr 4fr;
+    grid-template-rows: 0.1fr 1fr 1fr 1fr;
     gap: 15px;
 }
 
 .projects > .project{
     background-color: white;
+    border-left: solid 7px orange;
+    border-radius: 8px;
 }
 .projects h2{
     font-size: 20px;
